# poc-k8s-pods-commu

./: Makefile  README.md
app1/: Dockerfile  app.py  pyproject.toml
app2/: app.py  pyproject.toml
k8s/: app1-deploy.yaml  app1-service.yaml  app2-deploy.yaml  app2-service.yaml  namespace.yaml
