[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["nawawishkid <nawawish.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
